# ornithology-pi

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  Rocket.toml  build.rs  config.toml  crossbuild.Dockerfile  index-46553e6bb8311164.css  index.html  ornithology-pi.toml  overview.puml  yew-app-1ce690aa0b8a9171.js  yew-app-1ce690aa0b8a9171_bg.wasm  yew-app-1d15454756952e9c.js  yew-app-1d15454756952e9c_bg.wasm  yew-app-59ed2a24126b4337.js  yew-app-59ed2a24126b4337_bg.wasm  yew-app-5cf67202a0c563d7.js  yew-app-5cf67202a0c563d7_bg.wasm  yew-app-7c65d96f888ccf86.js  yew-app-7c65d96f888ccf86_bg.wasm  yew-app-7f98ca763fcadc6b.js  yew-app-7f98ca763fcadc6b_bg.wasm  yew-app-b8aeefebf27e9e7e.js  yew-app-b8aeefebf27e9e7e_bg.wasm  yew-app-c4aa8833c76d20d2.js  yew-app-c4aa8833c76d20d2_bg.wasm  yew-app-cd0da80f05a48b12d70ebe22a59dd15bb19d07f8d0803c8ec740a8beca2aa50864fd92d30f181ab7bcd27e927422c220.js  yew-app-cd0da80f05a48b12d70ebe22a59dd15bb19d07f8d0803c8ec740a8beca2aa50864fd92d30f181ab7bcd27e927422c220_bg.wasm  yew-app-da93640e4e295009.js  yew-app-da93640e4e295009_bg.wasm  yew-app-e4e40b1baa6968ed.js  yew-app-e4e40b1baa6968ed_bg.wasm
.cargo/: config
.github/workflows/: crossbuild.docker.yml  gh-pages.yml  latex.yml  release.yml  web.yml
app/: .gitignore  Cargo.toml  index.html
app/src/: about.rs  app.rs  footer.rs  lib.rs  main.rs  server_input.rs  sighting.rs  sightings.rs  webcam.rs
app/src-tauri/: tauri.conf.json
app/src/contexts/: api_url_ctx.rs  mod.rs
app/styles/: index.css
css/: app.0415aa7c.css  app.dbb9e9e4.css
debian/: service
docs/: MobileApp.md  RaspberryPi.md
examples/: bluetooth.rs  bt_client.rs  bt_gatt_client.rs  bt_gatt_srv.rs  bt_rfcomm_client.rs  bt_rfcomm_srv.rs  crop.rs  hotspot.rs  label.rs  raspicam.rs  webcam.rs  window.rs
js/: app.29c5c8e4.js  app.29c5c8e4.js.map  app.80cf6ef1.js  app.80cf6ef1.js.map  app.833efad1.js  app.833efad1.js.map  app.92b66818.js  app.92b66818.js.map  app.d2c72887.js  app.d2c72887.js.map  app.f30d8646.js  app.f30d8646.js.map  chunk-vendors.37bc65f9.js  chunk-vendors.37bc65f9.js.map  chunk-vendors.96f7b52d.js  chunk-vendors.96f7b52d.js.map  chunk-vendors.ade2188d.js  chunk-vendors.ade2188d.js.map  chunk-vendors.af6a3dde.js  chunk-vendors.af6a3dde.js.map
manual/: .gitignore  manual.tex
ornithology/: CMakeLists.txt  Client.qml  Devices.qml  Dialog.qml  Menu.qml  README.md  ZoomImage.qml  bluetooth.cpp  bluetooth.h  client.cpp  client.h  device.cpp  device.h  deviceinfo.h  devicesmodel.cpp  devicesmodel.h  main.cpp  main.qml  message.cpp  message.h  qml.qrc  resources.qrc  sighting.cpp  sighting.h
ornithology-app/: CMakeLists.txt  bluetoothform.cpp  bluetoothform.h  bluetoothform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  ornithology-app_en_150.ts  sightingform.cpp  sightingform.h  sightingform.ui
ornithology/android/: AndroidManifest.xml
sightings/: .gitignore
src/: bird_observer.rs  capture.rs  cli.rs  config.rs  crop.rs  errors.rs  hotspot.rs  label.rs  lib.rs  logger.rs  main.rs  mjpeg.rs  server.rs  sighting.rs
src/bluetooth/: bluetooth.rs  gatt_srv.rs  handle_message.rs  l2cap_srv.rs  message.rs  mod.rs  rfcomm_srv.rs
src/capture/: mod.rs  webcam.rs
src/detect/: crop.rs  label.rs  mod.rs
src/detector/: birddetector.rs  mod.rs
src/observer/: mod.rs  observable.rs  observer.rs
static/: index.css  index.html  index.js
web/: package.json  vue.config.js
web/src/: App.vue  main.js
web/src/components/: About.vue  BLE.vue  BLEDeviceList.vue  BluetoothConnect.vue  Connect.vue  Footer.vue  Header.vue  LastSighting.vue  LastSpecies.vue  SightingCount.vue
yew-app/: Cargo.toml  index.html
yew-app/src/: about.rs  app.rs  footer.rs  header.rs  lib.rs  sightings.rs  webcam.rs
