[package]
name = "ornithology-pi"
version = "0.1.0"
edition = "2021"
authors = ["Christian <chriamue@gmail.com>"]
description = "Capture birds in your garden, running on raspberry pi."
license = "MIT"
readme = "README.md"
repository = "https://github.com/chriamue/ornithology-pi"

[features]
default = ["bluetooth", "server", "window", "nokhwa/input-gst"]
bluetooth = ["bluer"]
server = ["rocket", "rocket-include-static-resources"]
window = ["show-image/image"]

[dependencies]
async-trait = "0.1"
bluer = { version = "0.13.1", optional = true }
chrono = "0.4"
image = { version = "0.23.14", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.22", default-features = false }
lenna_core = { git = "https://github.com/lenna-project/lenna-core", branch = "main" }
lenna_yolo_plugin = { git = "https://github.com/lenna-project/yolo-plugin", branch = "main", default-features = false }
lenna_birds_plugin = { git = "https://github.com/lenna-project/birds-plugin", branch = "main", default-features = false }
nokhwa = { version = "0.9.4", features = ["input-gst"] }
tract-onnx = { version = "0.15.9-pre", git = "https://github.com/chriamue/tract.git", branch = "main" }

rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
show-image = { version = "0.10.1", optional = true }

futures = "0.3"
tokio = { version = "1.13", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
pretty_env_logger = "0.2"
rocket = { version = "0.5.0-rc.1", features = ["json"], optional = true }
rocket-include-static-resources = { version = "0.10.0", features = [
    "cache",
], optional = true }

[package.metadata.deb]
section = "utils"
license-file = ["LICENSE"]
depends = "libc6,libgstreamer-plugins-base1.0-0,$auto"
assets = [
    [
        "target/release/ornithology-pi",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/ornithology-pi/README",
        "644",
    ],
    [
        "ornithology-pi.toml",
        "etc/ornithology-pi.toml",
        "644",
    ],
    [
        "sightings/.gitkeep",
        "var/ornithology-pi/sightings/.gitkeep",
        "644",
    ],
]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
