[package]
name = "ornithology-pi"
version = "0.8.0"
edition = "2021"
authors = ["Christian <chriamue@gmail.com>"]
description = "Capture birds in your garden, running on raspberry pi."
license = "MIT"
readme = "README.md"
repository = "https://github.com/chriamue/ornithology-pi"
build = "build.rs"

[features]
default = ["server", "camera"]
full = ["bluetooth", "camera", "detect", "hotspot", "server"]
pi = ["bluetooth", "camera", "detect", "server"]
bluetooth = ["bluer"]
camera = ["nokhwa/input-gst"]
hotspot = ["wifi-rs"]
server = ["base64", "rocket"]
window = ["show-image/image"]
detect = [
    "camera",
    "lenna_core",
    "lenna_core",
    "lenna_birds_plugin",
    "lenna_yolo_plugin",
    "tract-onnx",
]

[dependencies]
async-trait = "0.1"
atoi = "1.0.0"
base64 = { version = "0.13.1", optional = true }
bluer = { version = "0.13", optional = true }
bytes = "1.5.0"
chrono = "0.4"
figment = "0.10.10"
format-bytes = "0.1"
futures = "0.3"

image = { version = "0.23.14", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.22", default-features = false }
lenna_core = { git = "https://github.com/lenna-project/lenna-core", branch = "main", optional = true }
lenna_birds_plugin = { git = "https://github.com/lenna-project/birds-plugin", branch = "main", default-features = false, optional = true }
lenna_yolo_plugin = { git = "https://github.com/lenna-project/yolo-plugin", branch = "main", default-features = false, optional = true }
nokhwa = { version = "0.9.4", features = ["input-v4l", "output-threaded"] }
tract-onnx = { version = "0.17", optional = true }

rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
show-image = { version = "0.10.1", optional = true }

uuid = { version = "0.8", features = ["serde", "v4"] }
pnet = "0.29.0"
pretty_env_logger = "0.2"
rocket = { version = "0.5.0-rc.3", features = ["json"], optional = true }
tokio = { version = "1.32", features = ["full"] }
tokio-serde = { version = "0.8", features = [
    "bincode",
    "cbor",
    "json",
    "messagepack",
] }
wifi-rs = { git = "https://github.com/tnkemdilim/wifi-rs.git", optional = true }

[package.metadata.deb]
section = "utils"
license-file = ["LICENSE"]
depends = "libc6,libgstreamer-plugins-base1.0-0,gstreamer1.0-plugins-good,$auto"
assets = [
    [
        "target/release/ornithology-pi",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/ornithology-pi/README",
        "644",
    ],
    [
        "ornithology-pi.toml",
        "etc/ornithology-pi.toml",
        "644",
    ],
    [
        "sightings/.gitkeep",
        "var/ornithology-pi/sightings/.gitkeep",
        "644",
    ],
]
maintainer-scripts = "debian/"
systemd-units = { enable = false }

############# Examples ####

[[example]]
name = "window"
required-features = ["detect", "window"]

[[example]]
name = "label"
required-features = ["detect"]

[[example]]
name = "crop"
required-features = ["detect"]

[[example]]
name = "bluetooth"
required-features = ["bluetooth"]

[[example]]
name = "bt_gatt_srv"
required-features = ["bluetooth"]


[[example]]
name = "bt_rfcomm_srv"
required-features = ["bluetooth"]

[[example]]
name = "bt_rfcomm_client"
required-features = ["bluetooth"]

[[example]]
name = "hotspot"
required-features = ["hotspot"]

