[package]
name = "ornithology-pi"
version = "0.8.2"
edition = "2021"
authors = ["Christian <chriamue@gmail.com>"]
description = "Capture birds in your garden, running on raspberry pi."
license = "MIT"
readme = "README.md"
repository = "https://github.com/chriamue/ornithology-pi"
build = "build.rs"

[features]
default = ["server", "camera", "yolo"]
full = ["bluetooth", "camera", "detect", "hotspot", "server"]
pi = ["bluetooth", "camera", "detect", "server"]
bluetooth = ["bluer"]
camera = ["nokhwa/input-native"]
hotspot = ["wifi-rs"]
server = ["axum", "base64", "tower", "tower-http"]
window = ["show-image/image"]
detect = [
    "camera",
    "lenna_core",
    "lenna_core",
    "lenna_birds_plugin",
    "lenna_yolo_plugin",
]
yolo = ["lenna_yolo_plugin?/yolo"]
yolov8 = ["lenna_yolo_plugin?/yolov8"]

[dependencies]
async-trait = "0.1"
atoi = "1.0.0"
base64 = { version = "0.13.1", optional = true }
bluer = { version = "0.13", optional = true }
bytes = "1.5.0"
chrono = "0.4"
figment = { version = "0.10.10", features = ["env", "toml"] }
format-bytes = "0.1"
futures = "0.3"
hyper = "0.14.27"
image = { version = "0.24.7", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.23", default-features = false }
lenna_core = { git = "https://github.com/lenna-project/lenna-core", branch = "main", optional = true }
lenna_birds_plugin = { git = "https://github.com/lenna-project/birds-plugin", branch = "main", optional = true }
lenna_yolo_plugin = { git = "https://github.com/lenna-project/yolo-plugin", branch = "main", default-features = false, optional = true }
mime = "0.3.17"
nokhwa = { version = "0.10.4", features = ["output-threaded"] }

rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
show-image = { version = "0.10.1", optional = true }

uuid = { version = "0.8", features = ["serde", "v4"] }
pnet = "0.29.0"
pretty_env_logger = "0.2"
axum = { version = "0.6.20", optional = true }
tokio = { version = "1.32", features = ["full"] }
tokio-serde = { version = "0.8", features = [
    "bincode",
    "cbor",
    "json",
    "messagepack",
] }
tokio-util = { version = "0.7.9", features = ["io"] }
tower = { version = "0.4", features = ["util"], optional = true }
tower-http = { version = "0.4.4", features = ["fs", "trace", "cors"], optional = true }
wifi-rs = { git = "https://github.com/tnkemdilim/wifi-rs.git", optional = true }

[package.metadata.deb]
section = "utils"
license-file = ["LICENSE"]
depends = "libc6,libgstreamer-plugins-base1.0-0,gstreamer1.0-plugins-good,$auto"
assets = [
    [
        "target/release/ornithology-pi",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/ornithology-pi/README",
        "644",
    ],
    [
        "ornithology-pi.toml",
        "etc/ornithology-pi.toml",
        "644",
    ],
    [
        "sightings/.gitkeep",
        "var/ornithology-pi/sightings/.gitkeep",
        "644",
    ],
]
maintainer-scripts = "debian/"
systemd-units = { enable = false }

############# Examples ####

[[example]]
name = "window"
required-features = ["detect", "window"]

[[example]]
name = "label"
required-features = ["detect"]

[[example]]
name = "crop"
required-features = ["detect"]

[[example]]
name = "bluetooth"
required-features = ["bluetooth"]

[[example]]
name = "bt_gatt_srv"
required-features = ["bluetooth"]


[[example]]
name = "bt_rfcomm_srv"
required-features = ["bluetooth"]

[[example]]
name = "bt_rfcomm_client"
required-features = ["bluetooth"]

[[example]]
name = "hotspot"
required-features = ["hotspot"]
